--- a/chmi/.vscode/settings.json
+++ b/chmi/.vscode/settings.json
@@ -5,6 +5,7 @@
         "source.fixAll": true
     },
     
-    "dart.previewFlutterUiGuides": true
+    "dart.previewFlutterUiGuides": true,
+    "cmake.sourceDirectory": "${workspaceFolder}/linux"
 
 }
